fix image issue on iphone 8

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,10 +56,19 @@ body {
   flex-direction: row;
   height: 20vh;
   justify-content: center;
-  /* justify-self: stretch; */
   min-height: 130px;
   overflow: hidden;
   width: 20vh;
+  min-width: 130px;
+  max-width: 300px;
+}
+
+img {
+  height: 20vh;
+  min-height: 130px;
+  max-width: 300px;
+  width: 20vh;
+  min-width: 130px;
   max-width: 300px;
 }
 
